--- a/zabbix-server/playbook.yml
+++ b/zabbix-server/playbook.yml
@@ -1,64 +1,7 @@
 ---
 - hosts: zabbix-server
   remote_user: root
-  tasks:
-    - name: Prepare install folder
-      file: state=directory path={{ tmp_folder }}
-
-    - name: Download zabbix server 
-      get_url: url={{ deb_url }} dest={{ tmp_folder }}
-
-    - name: Update system
-      apt: update_cache=yes
-
-    - name: Installing General Packages
-      apt: pkg={{ item }} state=installed
-      tags: common
-      with_items:
-        - php5
-        - apache2
-        - mysql-server
-        - mysql-client
-        - php5-mysql
-        - php-apc
-        - php5-xmlrpc
-        - php-soap
-        - php5-gd
-        - sendmail
-        - unzip
-    
-    - name: Copy zabbix apache configuration file
-      template: src=./templates/apache.conf dest=/etc/apache2/sites-available/apache.conf
-
-    - name: enabling zabbix frontend
-      shell: a2ensite apache.conf
-      notify: reload apache
-
-
-    - name: Restarting apache server
-      apt: pkg={{ apache }} state=latest
-      notify: restart apache
-
-    - name: Ensure apache is running
-      service: name={{ apache }} state=started
-
-    - name: Installing zabbix server and mysql
-      apt: name={{ zabbix_mysql }} state=installed
-
-    - name: Installing zabbix frontend and php
-      apt: name={{ zabbix_front }} state=installed
-
-    - name: starting zabbix server
-      apt: name={{ zabbix_mysql }} state=present
-      notify: restart zabbix
-
-
-  handlers:
-    - name: restart apache
-      service: name={{ apache }} state=restarted
-    
-    - name: restart zabbix
-      command: service zabbix-server start
-    
-    - name: reload apache
-      service: name=apache2 state=reloaded
+  roles:
+  - common
+  - lamp
+  - server
