--- a/zabbix-server/roles/lamp/tasks/main.yml
+++ b/zabbix-server/roles/lamp/tasks/main.yml
@@ -3,3 +3,19 @@
   apt: pkg={{ item }} state=installed
   with_items: Lamp_packages
   tags: lamp
+
+- name: Create Mysql configuration file
+  template: src=my.cnf.j2 dest=/etc/my.cnf
+  notify: restart mysql
+
+- name: Install pip
+  apt: pkg=python-pip state=installed
+
+- name: Install mysql dev
+  apt: pkg=libmysqlclient-dev state=installed
+  
+- name: mysql Packages
+  pip: name=MySQL-python
+
+- name: Start Mysql Service
+  service: name=mysql state=started enabled=yes
