--- a/zabbix-server/roles/lamp/tasks/main.yml
+++ b/zabbix-server/roles/lamp/tasks/main.yml
@@ -2,20 +2,26 @@
 - name: Installing General Packages
   apt: pkg={{ item }} state=installed
   with_items: Lamp_packages
+  sudo: yes
   tags: lamp
 
 - name: Create Mysql configuration file
   template: src=my.cnf.j2 dest=/etc/my.cnf
+  sudo: yes
   notify: restart mysql
 
 - name: Install pip
   apt: pkg=python-pip state=installed
+  sudo: yes
 
 - name: Install mysql dev
   apt: pkg=libmysqlclient-dev state=installed
+  sudo: yes
   
 - name: mysql Packages
   pip: name=MySQL-python
+  sudo: yes
 
 - name: Start Mysql Service
   service: name=mysql state=started enabled=yes
+  sudo: yes
