--- a/zabbix-server/roles/mysql_zabbix/tasks/main.yml
+++ b/zabbix-server/roles/mysql_zabbix/tasks/main.yml
@@ -25,3 +25,9 @@
   tags: mysql_zabbix
   sudo: yes
   notify: restart mysql
+
+  - name: Restarting apache
+    apt: pkg=apache2 state=latest
+    tags: mysql_zabbix
+    sudo: yes
+    notify: restart apache
