--- a/zabbix-server/roles/mysql_zabbix/tasks/main.yml
+++ b/zabbix-server/roles/mysql_zabbix/tasks/main.yml
@@ -13,18 +13,21 @@
 
 - mysql_db: name='{{ zabbix_server_db_name }}' state=import target='{{ zabbix_schema }}'/schema.sql.gz
   sudo: yes
+  ignore_errors: yes
   tags: 
     - setup
     - mysql
 
 - mysql_db: name='{{ zabbix_server_db_name }}' state=import target='{{ zabbix_schema }}'/images.sql.gz
   sudo: yes
+  ignore_errors: yes
   tags: 
     - setup
     - mysql
 
 - mysql_db: name='{{ zabbix_server_db_name }}' state=import target='{{ zabbix_schema }}'/data.sql.gz
   sudo: yes
+  ignore_errors: yes
   tags: 
     - setup
     - mysql
