--- a/zabbix-server/roles/server/templates/zabbix_server.conf
+++ b/zabbix-server/roles/server/templates/zabbix_server.conf
@@ -271,7 +271,8 @@ DBPassword={{ zabbix_server_db_pass }}
 #
 # Mandatory: no
 # Default:
-# ListenIP=0.0.0.0
+
+ListenIP=0.0.0.0,{{zabbix_agent|join(',')}}
 
 # ListenIP=127.0.0.1
 
@@ -282,7 +283,7 @@ DBPassword={{ zabbix_server_db_pass }}
 # Mandatory: no
 # Range: 1-24
 # Default:
-# HousekeepingFrequency=1
+	# HousekeepingFrequency=1
 
 ### Option: MaxHousekeeperDelete
 #	The table "housekeeper" contains "tasks" for housekeeping procedure in the format:
