--- a/zabbix-server/roles/agent/templates/zabbix_agentd.conf
+++ b/zabbix-server/roles/agent/templates/zabbix_agentd.conf
@@ -124,7 +124,7 @@ Server=127.0.0.1,{{ zabbix_server }}
 # Default:
 # ServerActive=
 
-ServerActive=127.0.0.1
+ServerActive={{ zabbix_server }},127.0.0.1
 
 ### Option: Hostname
 #	Unique, case sensitive hostname.
