--- a/zabbix-server/roles/agent/templates/zabbix_agentd.conf
+++ b/zabbix-server/roles/agent/templates/zabbix_agentd.conf
@@ -83,7 +83,7 @@ LogFileSize=0
 # Default:
 # Server=
 
-Server=127.0.0.1,{{ zabbix_server }}
+Server=127.0.0.1,{{ groups[zabbix-server].0 }}
 
 ### Option: ListenPort
 #	Agent will listen on this port for connections from the server.
@@ -108,7 +108,7 @@ Server=127.0.0.1,{{ zabbix_server }}
 # Mandatory: no
 # Range: 0-100
 # Default:
-# StartAgents=3
+ StartAgents=2
 
 ##### Active checks related
 
