--- a/zabbix-server/roles/agent/templates/zabbix_agentd.conf
+++ b/zabbix-server/roles/agent/templates/zabbix_agentd.conf
@@ -61,7 +61,7 @@ LogFileSize=0
 # Mandatory: no
 # Default:
 # EnableRemoteCommands=0
- EnableRemoteCommands=1
+EnableRemoteCommands=1
 
 ### Option: LogRemoteCommands
 #	Enable logging of executed shell commands as warnings.
@@ -108,7 +108,7 @@ Server=127.0.0.1,{{ groups['zabbix-server'][0] }}
 # Mandatory: no
 # Range: 0-100
 # Default:
- StartAgents=2
+#StartAgents=2
 
 ##### Active checks related
 
@@ -135,7 +135,7 @@ Server=127.0.0.1,{{ groups['zabbix-server'][0] }}
 # Default:
 # Hostname=
 
-Hostname=Zabbix server
+#Hostname=Zabbix server
 
 ### Option: HostnameItem
 #	Item used for generating Hostname if it is undefined. Ignored if Hostname is defined.
@@ -234,7 +234,7 @@ Hostname=Zabbix server
 #
 # Mandatory: no
 # Default:
-# AllowRoot=0
+AllowRoot=1
 
 ### Option: Include
 #	You may include individual files or all files in a directory in the configuration file.
