logrotate reconfiguration added

--- a/logrotate_ansible/roles/logrotate/tasks/main.yml
+++ b/logrotate_ansible/roles/logrotate/tasks/main.yml
@@ -15,3 +15,9 @@
   sudo: yes
   tags:
     - setup
+
+- name: Restart logrotate service
+  shell: logrotate -fv /etc/logrotate.conf 
+  sudo: yes
+  tags:
+    - setup
